fixed - menu close on selecting the menu item on mobile

--- a/client/src/components/Header.module.css
+++ b/client/src/components/Header.module.css
@@ -1,7 +1,6 @@
 .navbarContainer {
-  max-width: 1100px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0rem 0.5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -14,33 +13,51 @@
 }
 
 .menuIcon {
-  display: none;
-}
-.cartPic {
-  width: 1rem;
-  padding-top: 0.5rem;
-  padding-right: 0.5rem;
-}
-.navElements ul {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
+  display: block;
+  cursor: pointer;
 }
 
-.navElements ul li:not(:last-child) {
-  margin-right: 60px;
+.cartPic {
+  width: 1rem;
+}
+
+.navElements ul {
+  display: flex;
+  list-style-type: none;
+  background-color: rgba(0, 0, 0, 0.6);
+  height: 100vh;
+  width: 96vw;
+}
+
+.logo,
+.navElements ul a {
+  font-weight: 500;
+  color: white;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .navElements ul a {
-  font-size: 16px;
-  font-weight: 400;
-  color: #2f234f;
+  font-size: 0.85rem;
+  padding: 0.2rem 0.3rem;
+}
+
+.logo {
+  font-size: 1rem;
+  padding: 0.2rem 0;
+}
+
+a:hover,
+a:focus,
+a:visited {
   text-decoration: none;
+  color: black;
+  box-shadow: 1px 1px 5px 1px rgba(255, 255, 255, 0.75);
+  -webkit-box-shadow: 1px 1px 5px 1px rgba(255, 255, 255, 0.75);
+  -moz-box-shadow: 1px 1px 5px 1px rgba(255, 255, 255, 0.75);
 }
 
 .navElements ul a.active {
-  color: #574c4c;
-  font-weight: 500;
   position: relative;
 }
 
@@ -54,106 +71,85 @@
   background-color: #574c4c;
 }
 
-@media (max-width: 768px) {
-  .navElements ul li:not(:last-child) {
-    margin-right: 30px;
-  }
+.navElements {
+  position: absolute;
+  right: 0;
+  top: 2rem;
+  margin-left: 1rem;
+  transition: all 0.3s ease-in;
 }
 
-@media (max-width: 600px) {
+.navElements.close {
+  width: 0px;
+}
+
+.navElements.active {
+  width: 100vw;
+}
+
+.navElements ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.navElements ul li {
+  margin-right: unset;
+  padding-top: 1rem;
+  padding-bottom: 0.5rem;
+}
+
+.navElements ul li:not(:last-child) {
+  margin-right: 0px;
+}
+
+@media (min-width: 40rem) {
+  .navbar {
+    width: 90%;
+    margin: 0 auto;
+  }
+
   .menuIcon {
-    display: block;
-    cursor: pointer;
+    display: none;
   }
 
   .navElements {
     position: absolute;
-    right: 0;
-    top: 60px;
-    background-color: #fef7e5;
-    width: 0px;
-    height: calc(100vh - 60px);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
-  }
-
-  .navElements.active {
-    width: 270px;
+    top: unset;
+    height: inherit;
   }
 
   .navElements ul {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    justify-content: space-between;
+    height: unset;
+    width: inherit;
+    background-color: unset;
   }
 
   .navElements ul li {
     margin-right: unset;
-    margin-top: 22px;
+    padding-top: unset;
+    padding-bottom: unset;
   }
-}
 
-@media (min-width: 1024px) {
-  .navbarContainer {
-    width: 90%;
-    margin: 0 auto;
+  .navElements ul li a {
+    color: #2f234f;
   }
-}
-/* .header {
-  background-color: rgb(255, 255, 255);
-}
-.headerCont {
-  display: grid;
-  grid-template-columns: 1fr 3fr 1fr;
-  grid-template-rows: auto;
-  width: 100%;
-  margin-top: 1rem;
-  margin-bottom: 0.7rem;
-}
-.hamMenu {
-  grid-column: 1/2;
-}
-.hamMenuPic {
-  width: 1rem;
-  padding-top: 0.5rem;
-  padding-left: 0.5rem;
-}
-.logo {
-  grid-column: 2/3;
-}
-.logoText {
-  font-weight: bold;
-  grid-column: 3/4;
-  color: black;
-  margin: 0;
-  text-align: center;
-  padding-top: 0.5rem;
-}
-.cart {
-  grid-column: 3/4;
-  /* position: absolute; *
-  text-align: right;
-}
-.cartPic {
-  width: 1rem;
-  padding-top: 0.5rem;
-  padding-right: 0.5rem;
-}
-a:link {
-  text-decoration: none;
-}
-a:visited {
-  text-decoration: none;
-  color: black;
-}
-@media (min-width: 1024px) {
-  .header {
-    width: 90%;
-    margin: 0 auto;
-  }
-}
 
-.navbar {
-  height: 60px;
-  background-color: #fef7e5;
-  position: relative;
-} */
+  .navElements ul li:not(:last-child) {
+    margin-right: 1rem;
+  }
+
+  .navElements.close {
+    width: unset;
+  }
+
+  a:hover,
+  a:focus,
+  a:visited {
+    box-shadow: 1px 0px 5px 5px rgba(0, 0, 0, 0.12);
+    -webkit-box-shadow: 1px 0px 5px 5px rgba(255, 255, 255, 0.12);
+    -moz-box-shadow: 1px 0px 5px 5px rgba(255, 255, 255, 0.12);
+  }
+}
